--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@ body{
     background-size:cover;
     background-filter:blur(55px);
     background-attachment: fixed;
+scroll-behavior:smooth;
 }
 #title{
 	text-align: center;
